[package]
name = "klap"
version = "0.1.0"
authors = ["Edward George <edwardgeorge@gamil.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
serde = { version = "1.0.126", optional = true, features=["derive"] }
thiserror = "1.0.26"

[dev-dependencies]
rstest = "0.10.0"
serde_yaml = "0.8.17"

[features]
default=["serde_support"]
serde_support = ["serde"]